# SymFT_Test

./: CMakeLists.txt  Project.toml  README.md  d3.stim  d5.stim  package-lock.json
benchmark/: README.md  generate_circuits.py
benchmark/circuit/: coherent_surface_d3_r1_p1e-3_rz0p02.stim  coherent_surface_d3_r3_p1e-3_rz0p02.stim  coherent_surface_d5_r1_p1e-3_rz0p02.stim  coherent_surface_d5_r5_p1e-3_rz0p02.stim  manifest.json  msc_proxy_d7_unverified_p1e-3.stim  pure_surface_d7_r7_p1e-3.stim  pure_surface_d9_r9_p1e-3.stim
benchmarks/: active_rotation_pair_avx2.c  bench_active_rotation_kernels.jl  bench_batched_stim_sampling.jl  bench_shared_active_batch_sampler.jl  bench_stim_sampling.jl  estimate_stim_rates.jl  profile_batched_stim_sampling.jl  profile_stim_sampling.jl  pure_clifford.stim
cpp/: CMakeLists.txt
cpp/include/symft/: batch_interleaved.hpp  batch_sampler.hpp  batch_simd.hpp  simd.hpp  symft.hpp
cpp/include/symft/circuit/: circuit.hpp
cpp/include/symft/core/: frames.hpp  pauli.hpp  symbolic.hpp
cpp/include/symft/factored/: factored.hpp
cpp/include/symft/frontend/: stim.hpp
cpp/include/symft/sampler/: active.hpp  batch_sampler.hpp  single_shot.hpp
cpp/src/: active_kernels.hpp  active_state.cpp  batch_active.cpp  batch_interleaved_avx2.cpp  batch_sampler.cpp  batch_simd_avx2.cpp  batch_simd_avx512.cpp  batch_simd_dispatch.cpp  batch_simd_scalar.cpp  batch_symbols.cpp  factored_executor.cpp  factored_planner.cpp  factored_state.cpp  simd_avx2.cpp  simd_avx512.cpp  simd_dispatch.cpp  simd_scalar.cpp  stim_parser.cpp  symft.cpp  symft_common.cpp
cpp/src/active/: active_kernels.hpp
cpp/src/batch/: batch_runtime.cpp  batch_simd_scalar.cpp
cpp/src/circuit/: circuit.hpp  circuit_lowering.cpp
cpp/src/core/: common.cpp  common.hpp  frames.cpp  frames.hpp  internal.hpp  pauli.cpp  pauli.hpp  symbolic.cpp  symbolic.hpp  symft.cpp  symft_common.cpp  symft_internal.hpp
cpp/src/cuda/: cuda_program.cpp  cuda_program.hpp  cuda_runtime.cu  cuda_runtime.hpp  cuda_sampler.cpp  cuda_sampler.hpp
cpp/src/factored/: factored.hpp  factored_internal.hpp  factored_planner.cpp  factored_state.cpp  pending_optimizer.cpp
cpp/src/frontend/: stim.hpp  stim_parser.cpp  stim_prepared_sampler.hpp  stim_sampling.cpp
cpp/src/sampler/: active.hpp  active_internal.hpp  active_kernels.hpp  active_state.cpp  batch_active.cpp  batch_internal.hpp  batch_parallel.hpp  batch_runtime.cpp  batch_sampler.cpp  batch_sampler.hpp  batch_simd_scalar.cpp  batch_symbols.cpp  component_plan.cpp  component_plan.hpp  exogenous.hpp  exogenous_presample.cpp  prepared_sampler.cpp  prepared_sampler.hpp  presampled_expression.cpp  presampled_expression.hpp  random.hpp  single_shot.hpp  single_shot_presample.cpp  single_shot_sampler.cpp
cpp/src/simd/: batch_simd.hpp  batch_simd_scalar.cpp  simd.hpp  simd_avx2.cpp  simd_avx512.cpp  simd_dispatch.cpp  simd_scalar.cpp
cpp/src/stim/: stim_parser.cpp
cpp/tests/: symft_cuda_tests.cpp  symft_tests.cpp
cpp/tools/: symft_active_layout_bench.cpp  symft_batch_active_layout_bench.cpp  symft_batch_bench.cpp  symft_bench.cpp  symft_cli.cpp  symft_cuda_rate_bench.cpp  symft_plan.cpp  symft_rate_bench.cpp
cpp/tools/rate_bench/: accumulation.cpp  options.cpp  output.cpp  rate_bench.hpp  runner.cpp
docs/: postselection_design.md
python/: README.md  pyproject.toml  setup.py
python/examples/: basic.py  test.py  test_stim.py
python/src/symft/: __init__.py  __init__.pyi  _native.cpp  _native.pyi
python/src/symft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: test_circuit_metadata.py  test_counts_sampling.py  test_detector_sampling.py  test_errors.py  test_imports.py  test_measurement_sampling.py  test_stim_features.py
src/: SymFT.jl  active_pauli_frame.jl  active_rotation_pair_avx2.c  active_state.jl  batch_structarray_turbo_kernels.jl  clifford_frame.jl  dormant_state.jl  factored_batch_sampler.jl  factored_single_shot_sampler.jl  factored_update_program.jl  frame_factored_state.jl  pauli_string.jl  pending_factored_measurements.jl  pending_factored_processing.jl  pending_factored_rewrites.jl  pending_factored_rotations.jl  shared_active_batch_sampler.jl  stim_parser.jl  stim_sampling.jl  symbolic_bool.jl
test/: runtests.jl  test_active_state.jl  test_clifford_frame.jl  test_extended_stim_max_k.jl  test_factored_batch_sampler.jl  test_factored_single_shot_sampler.jl  test_frame_factored_state.jl  test_helpers.jl  test_pauli_string.jl  test_pending_processing.jl  test_symbolic_state.jl
